samples/_failures_safe/1761129076_d3af9b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1a3f4f92.c: In function ‘main’:
./samples/SAFE/__tmp_1a3f4f92.c:166:16: error: missing terminating " character
  166 |         printf("De
      |                ^~~
./samples/SAFE/__tmp_1a3f4f92.c:166:9: error: expected expression at end of input
  166 |         printf("De
      |         ^~~~~~
./samples/SAFE/__tmp_1a3f4f92.c:166:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1a3f4f92.c:166:9: error: expected declaration or statement at end of input
